src/index.css
:root {
  /* Font sizes */
  --font-size-24: 24px;
  --font-size-12: 12px;
  --font-size-13: 13px;
  --font-size: 14px;
  --font-size-16: 16px;

  /* Text colors */
  --text-primary: rgb(3, 3, 3);
  --text-secondary: rgb(96, 96, 96);
  --text-sentiment: rgb(144, 144, 144);
  --text-title: #606060;

  /* Background colors */
  --bg-primary: rgba(255, 255, 255, 0.98);
  --bg-secondary: rgb(242, 242, 242);
  --bg-tertiary: rgb(103, 103, 103);
  --bg-icons: rgb(96, 96, 96);
  --bg-button-subs: rgb(236, 236, 236);
  --bg-body: #f9f9f9;
  --bg-disable: rgb(204, 204, 204);
  --bg-type: rgb(6, 95, 212);
  --bg-modal: rgb(50, 50, 50);
  --bg-red: rgb(248, 0, 0);

  --background-a: #f9f9f9;
  --background-b: #f1f1f1;
  --background-c: #e9e9e9;

  --badge-background: rgba(0, 0, 0, 0.05);
  --backdrop-background: rgba(0, 0, 0, 0.75);

  --bg-sentiment: rgb(144, 144, 144);

  /* Icon backgrounds */
  --icon-secondary: #606060;

  /* Borders */
  --border-primary: rgb(217, 217, 217);
  --border-secondary: rgba(0, 0, 0, 0.1);
  --border-live: rgb(204 0 0);

  /* Underline colors */
  --underline-color: #909090;

  /* Placeholder colors */
  --color-placeholders: #a2acb4;

  /* global spacing */
  --spacing-x: 1rem;
  --spacing-y: 1rem;

  /* Line height */
  --line-height-20: 20px;
  --line-height-32: 32px;

  /*------------------------
        VARS FOR CAROUSEL
  --------------------------
  */
  --item-per-row: 4;
  --item-width: calc(100% / var(--item-per-row) - 16px - 0.01px);
  --item-max-width: 360px;
}

@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");

body {
  margin: 0;
  font-family: "Roboto", sans-serif;
  font-size: var(--font-size);
  background: var(--background-a);
}
a {
  text-decoration: none;
}
code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}
button,
input,
optgroup,
select,
textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}
/*-------------------------------
     STYLES FOR CUSTOM SCROLL
  -------------------------------
*/
body::-webkit-scrollbar {
  width: 16px;
}
body::-webkit-scrollbar-thumb {
  height: 56px;

  background: #909090;
  border-radius: 8px;
  background-clip: content-box;
  border: 5px solid transparent;
}
.custom-scroll::-webkit-scrollbar {
  height: 10px;
  width: 8px;
}
.custom-scroll::-webkit-scrollbar-thumb {
  height: 56px;
  border-radius: 8px;
  border: 4px solid transparent;
  background-clip: content-box;
  background: #909090;
}

/*------------------------
        BREAKPOINTS
  ------------------------
*/
/* 
@media (min-width: 800) {
  :root {
    --item-per-row: 2;
    --item-max-width: 300px;
  }
}
@media (min-width: 1097px) {
  :root {
    --item-per-row: 2;
    --item-max-width: 320px;
  }
}
@media (min-width: 1300px) {
  :root {
    --item-per-row: 4;
    --item-max-width: 320px;
  }
}
@media (min-width: 1785px) {
  :root {
    --item-per-row: 5;
    --item-max-width: 320px;
  }
}
@media (min-width: 1920px) {
  :root {
    --item-per-row: 4;
    --item-max-width: 360px;
  }
}
@media (min-width: 2500px) {
  :root {
    --item-per-row: 6;
    --item-max-width: 360px;
  }
} */

/* for debugging */
.debug {
  position: "fixed";
  top: 0;
  left: 0;
  z-index: 1000;
  background: "yellow";
  height: "50px";
}

